--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,14 @@ android {
             path "CMakeLists.txt"
         }
     }
+    splits {
+        abi {
+            enable true
+            reset()
+            include "arm64-v8a", "armeabi", "armeabi-v7a", "x86", "x86_64", "mips", "mips64"
+            universalApk true
+        }
+    }
 }
 
 dependencies {
