Add native objects

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -3,8 +3,9 @@ cmake_minimum_required(VERSION 3.4.1)
 add_library(
              NativeCoder
              SHARED
-             src/main/cpp/JNI_NativeCoder.cpp
-             src/main/cpp/NativeCoder.cpp
+             src/main/cpp/avcencoder.cpp
+             src/main/cpp/ThreadQueue.cpp
+             src/main/cpp/jni_codec.cpp
               )
 
 find_library(
