--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,11 +10,12 @@ android {
     buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.placelook"
-        minSdkVersion 24
+        minSdkVersion 21
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
         externalNativeBuild {
             cmake {
                 cppFlags "-std=c++11"
